# imap-client

./: CMakeLists.txt  README.md  main.cpp
include/: ImapClient.h  ImapClient.hpp  SmtpClient.h
libs/Base64/: CMakeLists.txt
libs/Base64/include/: Base64I.h
libs/Base64/src/: Base64.cpp
libs/ImapResponse/: CMakeLists.txt
libs/ImapResponse/include/: ImapResponse.h  ImapResponseI.h  ImapResponseI.hpp  StatusType.h
libs/ImapResponse/src/: ImapResponse.cpp
libs/MailMessage/: CMakeLists.txt
libs/MailMessage/include/: MailAddress.h  MailAttachmentI.hpp  MailMessage.h  MailMessageBuilder.h  MailMessageBuilderI.h  MailMessageBuilderI.hpp  MailMessageFormatter.h  MailMessageFormatterI.h  MailMessageFormatterI.hpp  MailMessageI.h  MailMessageI.hpp
libs/MailMessage/src/: MailAddress.cpp  MailAttachment.cpp  MailMessageBuilder.cpp  MailMessageFormatter.cpp
libs/MessageSender/: CMakeLists.txt
libs/MessageSender/include/: MessageSender.h  MessageSenderI.h  MessageSenderI.hpp
libs/MessageSender/src/: MessageSender.cpp
libs/SMTPResponse/: CMakeLists.txt
libs/SMTPResponse/include/: SMTPResponse.h  StatusType.h
libs/SMTPResponse/src/: SMTPResponse.cpp
libs/SmartSocket/: CMakeLists.txt
libs/SmartSocket/include/: SmartSocket.h  SmartSocketI.h  SmartSocketI.hpp
libs/SmartSocket/src/: SmartSocket.cpp
src/: ImapClient.cpp  SmtpClient.cpp
